opam-version: "2.0"
synopsis: "Collect runtime profiling information in CTF format"
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "BSD-2-clause"
homepage: "https://github.com/mirage/mirage-profile"
doc: "https://mirage.github.io/mirage-profile"
bug-reports: "https://github.com/mirage/mirage-profile/issues"
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {build & >= "1.0"}
  "mirage-profile" {>= "0.8.0"}
  "io-page-xen"
  "io-page"
  "mirage-xen-minios"
  "ocplib-endian"
  "mirage-xen"
  "xenstore"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/mirage-profile.git"
