opam-version: "2.0"
synopsis: "Collect runtime profiling information in CTF format"
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "BSD-2-clause"
homepage: "https://github.com/mirage/mirage-profile"
doc: "https://mirage.github.io/mirage-profile"
bug-reports: "https://github.com/mirage/mirage-profile/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.0"}
  "cstruct" {>= "3.0.0"}
  "ppx_cstruct" {build}
  "ocplib-endian"
  "lwt"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/mirage-profile.git"
